--- a/_scss/_fonts.scss
+++ b/_scss/_fonts.scss
@@ -1,12 +1,5 @@
 body {
-  font-family: "Source Sans Pro", Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-.banner {
-
-  a.logo {
-    font-family: "Helvetica"
-  }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 code,
